adding the new xml file

--- a/gitpowerhouse/test-output/old/Parallel Tests/power house with firefox.properties
+++ b/gitpowerhouse/test-output/old/Parallel Tests/power house with firefox.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=power house with firefox][SuiteResult context=power house PowerSiteUpgradeGold][SuiteResult context=power house LoginWithDifferentOption][SuiteResult context=power house PurchasePowersiteSubscription purchase]
+[SuiteResult context=power house testcases with chrome][SuiteResult context=power house with firefox]
