--- a/gitpowerhouse/pom.xml
+++ b/gitpowerhouse/pom.xml
@@ -18,7 +18,7 @@
         <version>2.20</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>tregistrationestng.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
